--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "framer-motion": "^10.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "audit": "^0.0.6",
+    "dotenv": "^16.3.1",
     "fix": "^0.0.3",
     "hardhat": "^2.19.4"
   }
