--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "audit": "^0.0.6",
     "dotenv": "^16.3.1",
     "fix": "^0.0.3",
-    "hardhat": "^2.19.4"
+    "hardhat": "^2.19.4",
+    "hardhat-waffle": "^0.0.1-security"
   }
 }
