--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.17.0",
+    "npm-install": "^1.8.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
-    "update": "^0.7.4",
+    "react-scripts": "^5.0.1",
+    "update": "^0.4.2",
+    "upgrade": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,6 +52,7 @@
     "dotenv": "^16.3.1",
     "fix": "^0.0.3",
     "hardhat": "^2.19.4",
-    "hardhat-waffle": "^0.0.1-security"
+    "hardhat-waffle": "^0.0.1-security",
+    "webpack": "^4.29.6"
   }
 }
